--- a/src/less/modals.less
+++ b/src/less/modals.less
@@ -4,11 +4,13 @@
 // .modal__container - positioning shell for the actual modal
 // .modal__content   - actual modal w/ bg and corners and shiz
 
+
 // -------------------------
 // Modal Open State
 // -------------------------
 
 
+// class added to body
 .modal-open {
   overflow: hidden;
 }
@@ -92,7 +94,7 @@
 
 
 .modal__header {
-  border-bottom: 1px solid @modal-header-border-color;
+  border-bottom: 2px solid @modal-header-border-color;
   display: flex;
   min-height: (@modal-header-padding-vert + @modal-header-line-height);
   padding: @modal-header-padding-vert @modal-header-padding-hor;
