--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -11,7 +11,6 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   box-sizing: border-box;
   font-size: @font-size-root;
-  overflow-x: hidden;
 
   /*@media (min-width: 2540px) {
     font-size: 12px;
